--- a/style.css
+++ b/style.css
@@ -1,3 +1,102 @@
-.container { 
+@font-face {
+    font-family: 'Sen';
+    src: url("assets/fonts/Sen-Regular.ttf");
+    font-weight: 100;
+}
+@font-face {
+    font-family: 'Sen';
+    src: url("assets/fonts/Sen-Bold.ttf");
+    font-weight: 300;
+}
+@font-face {
+    font-family: 'Sen';
+    src: url("assets/fonts/Sen-ExtraBold.ttf");
+    font-weight: 800;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a, a.text:active {
+    text-decoration: none;
+}
+
+li {
+    text-decoration: none;
+    list-style: none;
+}
+
+div {
+    border: 1px solid red;
+}
+
+body {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 320px;
+    min-height: 100vh;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 1;
+    color: #000000;
+    font-family: 'Sen', sans-serif;
+    border: 1px solid red;
+}
+
+header {
+    background-color: rgb(224, 219, 255);
+}
+header ul {
+    display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+    
+}
+
+header li {
+    display: block;
+    background-color: rgb(224, 219, 255);
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    
+}
+
+header a{
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.7em;
+    color: rgb(107, 1, 1);
+    margin: 20;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.main {
+    border: 1px solid red;
+}
+
+.footer {
+    border: 1px solid red;
 }
