--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth; 
+  }
+
 a, a.text:active {
     text-decoration: none;
 }
@@ -30,58 +34,112 @@ li {
 }
 
 div {
-    border: 1px solid red;
-
+    /*border: 1px solid red;*/
 }
 
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 1440px;
     min-width: 320px;
     min-height: 100vh;
+    margin: 0 auto;
+    background-color: #ddc5a24d;
+        
     font-size: 16px;
     font-weight: 200;
-    line-height: 1;
-    color: #000000;
+    color: #301b28;
     font-family: 'Sen', sans-serif;
-    border: 1px solid red;
+   /* border: 1px solid red; */
+}
+
+.upper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 header {
-    max-width: 1440px;
-    margin: 0 auto;
-    background-color: rgb(224, 219, 255);
+    
+    background-color: #ddc5a08d;
 }
 
 header ul {
     display: flex;
-    justify-content:space-around;
+    justify-content:flex-start;
+    align-items: center;
     flex-wrap: wrap;
 }
 
 header li {
     display: block;
-    background-color: rgb(224, 219, 255);
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-    margin-top: 0.3em;
-    margin-bottom: 0.3em;
-
+    background-color: #b66857ad;
+   
+    
 }
 
 header a{
-    text-decoration: none;
     font-size: 20px;
     font-weight: 400;
     line-height: 1.7em;
-    color: rgb(107, 1, 1);
-    margin: 20;
+    padding: 0 0.3em;
+    color: #301b28;
+    transition: color 0.5s;   
 }
 
-main, footer {
-    border: 1px solid red;
-    max-width: 1440px;
-    margin: 0 auto;
+header a:hover {
+    color: #09ff00;
 }
 
+main a{
+    color: #301b28;;
+    transition: color 0.5s;   
+}
+
+main a:hover {
+    color: #09ff00;
+}
+
+footer a{
+    font-size: 2em;
+    font-weight: 400;
+    color: #301b28;
+    transition: color 0.5s;   
+}
+
+footer a:hover {
+    color: #09ff00;
+}
+
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+  
+  .section {
+    width: 50%;
+    padding: 0.7em;
+  }
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+
+  .rss {
+    width: 121px;
+    height: 45px;
+  }
+  .photo {
+    width: calc(172px/2);
+    height: calc(144px/2);
+  }
+  .footer {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
